NatureScraper is modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest3.bib
@@ -1,11 +1,11 @@
 @article{nokey,
-author = {Van Noorden, Richard; },
+author = {Van Noorden, Richard},
 journal = {Nature News},
 doi = {10.1038/512126a},
 title = {Online collaboration: Scientists and the social network},
 pages = {126},
-year = {2014},
-month = {Aug},
+year = 2014,
+month = aug,
 volume = {512},
 number = {7513}
 ,url = {http://www.nature.com/news/online-collaboration-scientists-and-the-social-network-1.15711}
