nokey is added if key is not available

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ApsScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ApsScraperUnitURLTest.bib
@@ -1,12 +1,15 @@
-@article {
-	author = {Gianvito Martino and Stefano Pluchino and Luca Bonfanti and Michal Schwartz},
+@article {nokey,
+	author = {Martino, Gianvito and Pluchino, Stefano and Bonfanti, Luca and Schwartz, Michal},
 	title = {Brain Regeneration in Physiology and Pathology: The Immune Signature Driving Therapeutic Plasticity of Neural Stem Cells},
 	volume = {91},
 	number = {4},
 	pages = {1281--1304},
 	year = {2011},
 	doi = {10.1152/physrev.00032.2010},
-	URL = {http://physrev.physiology.org/content/91/4/1281},
-	eprint = {http://physrev.physiology.org/content/91/4/1281.full.pdf},
+	publisher = {American Physiological Society},
+	abstract = {Gianvito Martino, Stefano Pluchino, Luca Bonfanti, and Michal SchwartzInstitute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Milan, Italy; Cambridge Centre for Brain Repair and Cambridge Stem Cell Initiative, University of Cambridge, Cambridge, United Kingdom; Department of Veterinary Morphophysiology, Neuroscience Institute Cavalieri Ottolenghi, University of Turin, Turin, Italy; and Department of Neurobiology, The Weizmann Institute of Science, Rehovot, IsraelAbstract
+Regenerative processes occurring under physiological (maintenance) and pathological (reparative) conditions are a fundamental part of life and vary greatly among different species, individuals, and tissues. Physiological regeneration occurs naturally as a consequence of normal cell erosion, or as an inevitable outcome of any biological process aiming at the restoration of homeostasis. Reparative regeneration occurs as a consequence of tissue damage. Although the central nervous system (CNS) has been considered for years as a {\textquotedblleft}perennial{\textquotedblright} tissue, it has recently become clear that both physiological and reparative regeneration occur also within the CNS to sustain tissue homeostasis and repair. Proliferation and differentiation of neural stem/progenitor cells (NPCs) residing within the healthy CNS, or surviving injury, are considered crucial in sustaining these processes. Thus a large number of experimental stem cell-based transplantation systems for CNS repair have recently been established. The results suggest that transplanted NPCs promote tissue repair not only via cell replacement but also through their local contribution to changes in the diseased tissue milieu. This review focuses on the remarkable plasticity of endogenous and exogenous (transplanted) NPCs in promoting repair. Special attention will be given to the cross-talk existing between NPCs and CNS-resident microglia as well as CNS-infiltrating immune cells from the circulation, as a crucial event sustaining NPC-mediated neuroprotection. Finally, we will propose the concept of the context-dependent potency of transplanted NPCs (therapeutic plasticity) to exert multiple therapeutic actions, such as cell replacement, neurotrophic support, and immunomodulation, in CNS repair.},
+	isbn = {1522-1210},
+	issn = {0031-9333},
 	journal = {Physiological Reviews}
 }
