--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -69,7 +69,9 @@ basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
 # batchedit page(s)
-batchedit.deleteSelected.confirm = Do you really want to delete all selected posts?
+batchedit.deleteAlert 			 = Warning: You are about to delete the selected posts!
+batchedit.normalizeAlert		 = Info: You are about to normalize BibTex Key of the selected posts!
+batchedit.selection.help		 = Select an edit option
 
 batchedit.notYours			     = The following posts do not belong to your collection. You can only edit your own posts.
 batchedit.info1                  = Here you can edit your posts. Edit options include
@@ -79,13 +81,16 @@ batchedit.option2				 = Changing privacy
 batchedit.option3				 = Deleting post(s)
 batchedit.option4				 = Editing tags of each post
 batchedit.option5				 = Adding tag(s) to several posts
+batchedit.selection.initial		 = Please select action...
+batchedit.selection				 = Select
 batchedit.selectAll				 = Select all posts
 batchedit.updateSelected         = update tags
 batchedit.yourPosts              = short description
-batchedit.viewable				 = Viewable for:
+batchedit.viewable				 = Update privacy (Viewable for:)
 batchedit.Selection.addToAll	 = Add a tag (s) to all posts
 batchedit.Selection.addToEach	 = Update tag (s) of each post
-batchedit.yourPostsTags			 = Your posts' tags
+batchedit.selectedTags			 = Add these tags to ALL SELECTED posts.
+batchedit.yourTags				 = Your posts' tags
 batchedit.AllpostTagsHeader		 = The following tag(s) will be added <br/> to all the selected posts
 batchedit.delBtn.message		 = Delete the selected post(s)
 batchedit.normBtn.message		 = Normalize bibtex key for the selected post(s)
@@ -95,7 +100,7 @@ batchedit.normalizeBtn.confirm	 = Do you really want to normalize BibTex Key of 
 batchedit.noPost.message		 = There is no post to edit!
 batchedit.tagEachBtn.message	 = Add or remove tag(s) of the selected post(s).
 batchedit.tagAllBtn.message		 = Add tag(s) to the selected post(s).
-batchedit.editHint				 = To enable edit options, select at least one post.
+batchedit.editHint				 = Info: To enable edit options, select an action and at least one post.
 batchedit.normConfirm			 = Do you want to normalize BibTex Key of the selected post(s)?
 batchedit.ok					 = Ok
 batchedit.cancel				 = Cancel
@@ -117,7 +122,11 @@ batchedit.checkboxEditAllTag	 = Add tag(s) to selected post(s)
 batchedit.checkboxEditEachTag	 = Edit each post's tag separately
 batchedit.alreadyInCollectionError	 = This post is already stored in Database!
 batchedit.alreadyInSnippetError		 = This post is added more than one time to the snippet!
-
+batchedit.button.update			 = update
+batchedit.disregardedPosts       = Disregarded posts
+batchedit.disregardedPosts.info  = The following posts are not your own and therefore you can not change their tags.
+batchedit.normalizeSelected		 = Normalize BibTex Key
+batchedit.deleteSelected		 = Delete post(s)
 
 bibtex.abstract                              = abstract
 bibtex.abstract.cap                          = Abstract
