->group login available for saml-systems ->no registration available for puma

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1030,6 +1030,7 @@ navi.infobox                     = info
 navi.join                        = Join Group {0}
 navi.loggedInAs                  = logged in as
 navi.login                       = sign in
+navi.login.group                 = group login
 navi.login.permanent             = permanent login
 navi.logout                      = logout
 navi.my                          = my
