--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1021,6 +1021,7 @@ navi.infobox                     = Info
 navi.join                        = Treten Sie der Gruppe {0} bei
 navi.loggedInAs                  = Angemeldet als
 navi.login                       = Anmelden
+navi.login.group                 = Als Gruppe anmelden
 navi.login.permanent             = Dauerhaft anmelden
 navi.logout                      = Abmelden
 navi.my                          = mein
