--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -113,13 +113,13 @@ batchedit.delConfirm			 = Do you really want to delete the selected post(s)?
 batchedit.deleted				 = Selected post(s) are deleted.
 batchedit.eachTagOk				 = Edit tag(s)
 batchedit.allTagOk				 = Add tag(s)
-batchedit.privacyOk				 = Change privacy
+batchedit.updatePrivacy			 = Update privacy
 batchedit.cancelbtn				 = Cancel
 batchedit.editBtn				 = Edit
 batchedit.combiEditConfirm		 = Selected post(s) are edited.
 batchedit.checkboxNormalize		 = Normalize BibTex Key
-batchedit.checkboxEditAllTag	 = Add tag(s) to selected post(s)
-batchedit.checkboxEditEachTag	 = Edit each post's tag separately
+batchedit.EditAllTag	 		 = Add a tag to all the selected posts
+batchedit.EditEachTag			 = Edit each posts' tags separately
 batchedit.alreadyInCollectionError	 = This post is already stored in Database!
 batchedit.alreadyInSnippetError		 = This post is added more than one time to the snippet!
 batchedit.button.update			 = update
