--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -124,7 +124,7 @@ batchedit.alreadyInCollectionError	 = This post is already stored in Database!
 batchedit.alreadyInSnippetError		 = This post is added more than one time to the snippet!
 batchedit.button.update			 = update
 batchedit.disregardedPosts       = Disregarded posts
-batchedit.disregardedPosts.info  = The following posts are not your own and therefore you can not change their tags.
+batchedit.disregardedPosts.info  = This post is not your own and therefore you can not edit it.
 batchedit.normalizeSelected		 = Normalize BibTex Key
 batchedit.deleteSelected		 = Delete post(s)
 
