added missing message keys

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -16,9 +16,12 @@ admin.actions.consumer.list        = List of all registered OAuth consumers
 admin.actions.consumer.register    = Register OAuth consumer
 admin.actions.general              = General actions
 admin.actions.group                = Add a group
+admin.actions.group.accept		   = accept
+admin.actions.group.decline		   = decline
 admin.actions.oauth                = Manage OAuth Consumers
 admin.actions.scraper              = Scraper info 
 admin.actions.user                 = User info
+admin.group.pending				   = pending groups
 admin.oauth.consumer.callbackUrl   = Callback URL
 admin.oauth.consumer.description   = description
 admin.oauth.consumer.details       = Consumer Details
@@ -769,8 +772,14 @@ group.cv.headline                                        = Grouppage of the grou
 group.cv.members                                         = Members
 group.cv.publications                                    = Recently added publications
 group.cv.title                                           = CV of {0} group
+group.description.help									 = a short description of the group
 group.doesnotexist.header                                = group does not exist
+group.groupRequest.userName								 = username
+group.groupRequest.reason								 = reason for request
+group.groupRequest.reason.help							 = the reason why you need the group
 group.memberOf                                           = member
+group.name												 = name
+group.name.help											 = the name of the group
 group.publicationReportingSettings.externalReportingUrl  = external reporting service address
 group.publicationReportingSettings.reportingMailAddress  = mail address
 group.publicationReportingSettings.reportingMailTemplate = mail template
@@ -780,12 +789,14 @@ group.reporting.mail.subject                             = New publication repor
 
 groups = groups
 
-groups.actions.shareDocuments         = share
-groups.actions.shareDocuments.title   = Share your documents with the group
-groups.actions.unshareDocuments       = unshare
-groups.actions.unshareDocuments.title = Unshare your documents with the group
-groups.documentsharing.disabled       = disabled
-groups.documentsharing.shared         = shared
+groups.actions.shareDocuments            = share
+groups.actions.shareDocuments.title      = Share your documents with the group
+groups.actions.unshareDocuments          = unshare
+groups.actions.unshareDocuments.title    = Unshare your documents with the group
+groups.documentsharing.disabled          = disabled
+groups.documentsharing.shared            = shared
+settings.groups.documentsharing.disabled = disabled
+settings.groups.documentsharing.shared   = shared
 
 help = Help
 
@@ -952,6 +963,12 @@ name = name
 navi.about                       = Contact
 navi.account                     = account
 navi.admin                       = admin
+navi.admin.group				 = groups
+navi.admin.lucene				 = lucene
+navi.admin.oauth				 = oauth
+navi.admin.recommender			 = recommenders
+navi.admin.spam					 = spam
+navi.admin.synchronization		 = synchronization
 navi.admin_lucene                = Admin: Lucene
 navi.admin_nospammer             = Admin: No Spammer
 navi.admin_spam                  = Admin: Spam
@@ -1012,6 +1029,7 @@ navi.go                          = go
 navi.group                       = group
 navi.group.cap                   = Group
 navi.group.hint                  = <group>
+navi.group.settings				 = settings
 navi.groups                      = groups
 navi.groups.all                  = all groups
 navi.groups.cap                  = Groups
@@ -1030,6 +1048,7 @@ navi.infobox                     = info
 navi.join                        = Join Group {0}
 navi.loggedInAs                  = logged in as
 navi.login                       = sign in
+navi.login.group                 = group login
 navi.login.permanent             = permanent login
 navi.logout                      = logout
 navi.my                          = my
@@ -1738,6 +1757,8 @@ settings.generalInformation                      = general information
 settings.generateapikey                          = (re)generate API key
 settings.german                                  = german
 settings.group                                   = group
+settings.groups									 = groups
+settings.groups.actions.shareDocuments			 = share
 settings.group.addUser                           = add a user to my group
 settings.group.addUser.button                    = add user
 settings.group.addUser.help                      = the user's name that is to be added
@@ -1750,18 +1771,28 @@ settings.group.deny                              = deny join request of user {0}
 settings.group.deny.button                       = deny
 settings.group.denyReason                        = reason
 settings.group.denyReason.help                   = the reason why the user is not allowed to join
+settings.group.description						 = description
+settings.group.editSettings						 = edit settings
 settings.group.error.addUserToGroupFailed        = The user {0} could not be added to the group {1}.
 settings.group.error.groupDoesNotExist           = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.mandatoryFieldsNotSet       = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
+settings.group.inviteUser.button				 = invite
+settings.group.inviteUser.help				 	 = the name of the user you want to invite
 settings.group.login                             = Sorry, you are not logged in with the corresponding group account. Please login as group {0}.
 settings.group.memberList                        = member list
 settings.group.memberList.empty                  = no users in group
 settings.group.memberList.help                   = set the privacy level of your member list
+settings.group.name 							 = name
 settings.group.noGroups                          = You aren't a member of any group.
+settings.group.pendingInvites					 = group invites
+settings.group.remInvite.button					 = dismiss
+settings.group.remInvite.button.title			 = dismiss the group invite
 settings.group.reporting                         = publication reporting settings
 settings.group.reporting.address                 = reporting service
 settings.group.reporting.mail                    = mail reporting settings
 settings.group.reporting.update                  = update reporting settings
+settings.group.reqGroup							 = request a new group
+settings.group.reqReason						 = reason for request
 settings.group.settings                          = group settings
 settings.group.sharedDocuments                   = shared documents
 settings.group.sharedDocuments.help              = If activated, group members have access to the documents of other group members.
