Failed tests fixed.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest3.bib
@@ -12,11 +12,18 @@ number = {1},
 pages = {1-16},
 year = {2012},
 doi = {10.1146/annurev-bioeng-071811-150124},
-note ={PMID: 22524388},
+    note ={PMID: 22524388},
 
-URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-bioeng-071811-150124},
-eprint = {http://www.annualreviews.org/doi/pdf/10.1146/annurev-bioeng-071811-150124},
-abstract = { An understanding of the interactions between nanoparticles and biological systems is of significant interest. Studies aimed at correlating the properties of nanomaterials such as size, shape, chemical functionality, surface charge, and composition with biomolecular signaling, biological kinetics, transportation, and toxicity in both cell culture and animal experiments are under way. These fundamental studies will provide a foundation for engineering the next generation of nanoscale devices. Here, we provide rationales for these studies, review the current progress in studies of the interactions of nanomaterials with biological systems, and provide a perspective on the long-term implications of these findings. }
+URL = { 
+        http://dx.doi.org/10.1146/annurev-bioeng-071811-150124
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1146/annurev-bioeng-071811-150124
+    
+}
+,
+    abstract = { An understanding of the interactions between nanoparticles and biological systems is of significant interest. Studies aimed at correlating the properties of nanomaterials such as size, shape, chemical functionality, surface charge, and composition with biomolecular signaling, biological kinetics, transportation, and toxicity in both cell culture and animal experiments are under way. These fundamental studies will provide a foundation for engineering the next generation of nanoscale devices. Here, we provide rationales for these studies, review the current progress in studies of the interactions of nanomaterials with biological systems, and provide a perspective on the long-term implications of these findings. }
 }
 
 
