--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest4.bib
@@ -1,7 +1,7 @@
 @article{nokey,
-author = {Cressey, Daniel and Castelvecchi, Davide},
+url = {http://www.nature.com/news/images-of-the-month-october-2014-1.16228},
+author = {Cressey, Daniel and  Castelvecchi, Davide},
 journal = {Nature News},
 doi = {10.1038/nature.2014.16228},
-title = {Images of the month: October 2014}
-,url = {http://www.nature.com/news/images-of-the-month-october-2014-1.16228}
+title = {Images of the month: October 2014},
 }
