--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
@@ -12,11 +12,18 @@ number = {1},
 pages = {77-107},
 year = {2004},
 doi = {10.1146/annurev.bioeng.6.040803.140250},
-note ={PMID: 15255763},
+    note ={PMID: 15255763},
 
-URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev.bioeng.6.040803.140250},
-eprint = {http://www.annualreviews.org/doi/pdf/10.1146/annurev.bioeng.6.040803.140250},
-abstract = { ▪ Abstract  The growth and remodeling of a tissue depends on certain features in the history of its mechanical environment as well as its genetic makeup. The mechanical environment influences the tissue's developing morphology, the process of simply increasing the size of existing morphological structures, and the formation of the proteins of which the tissue is constructed. The relationships between genetic information, various epigenetic mechanisms and tissue development are discussed. The developmental growth and remodeling of most structural tissues are enhanced by the use of those tissues and retarded by their disuse. The mechanical or mathematical modeling of tissue growth and development using cellular automata models and continuum mechanical models is reviewed. }
+URL = { 
+        http://dx.doi.org/10.1146/annurev.bioeng.6.040803.140250
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1146/annurev.bioeng.6.040803.140250
+    
+}
+,
+    abstract = { ▪ Abstract The growth and remodeling of a tissue depends on certain features in the history of its mechanical environment as well as its genetic makeup. The mechanical environment influences the tissue's developing morphology, the process of simply increasing the size of existing morphological structures, and the formation of the proteins of which the tissue is constructed. The relationships between genetic information, various epigenetic mechanisms and tissue development are discussed. The developmental growth and remodeling of most structural tissues are enhanced by the use of those tissues and retarded by their disuse. The mechanical or mathematical modeling of tissue growth and development using cellular automata models and continuum mechanical models is reviewed. }
 }
 
 
