--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest3.bib
@@ -1,4 +1,5 @@
 @article{nokey,
+url = {http://www.nature.com/news/online-collaboration-scientists-and-the-social-network-1.15711},
 author = {Van Noorden, Richard},
 journal = {Nature News},
 doi = {10.1038/512126a},
@@ -8,5 +9,4 @@ year = 2014,
 month = aug,
 volume = {512},
 number = {7513}
-,url = {http://www.nature.com/news/online-collaboration-scientists-and-the-social-network-1.15711}
 }
