fixed explanation of QR code scanner (it's not nice, yet, but the best I can do with an editor)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -388,7 +388,7 @@ didyouknow = Did you know...
 didyouknow.browserButtons  = Our browser add-ons helps you to collect bookmarks and publications. <a href="/buttons">Read more.</a>
 didyouknow.editYourProfile = It''s much easier for your colleagues to find you, if you''ve filled out your research profile. <a href="/settings">Edit my profile.</a>
 didyouknow.isbn            = In order to save a book, a journal, or a magazine in your publication list, you can <a href="/postPublication?selTab=3#selTab3">insert easily</a> a unique identifier like an ISBN, an ISSN, or a DOI. It searches for the other metadata self-acting and transmits these into your post input form. This saves time and nerves.
-didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option 'scan code' on the 'post publication' page {0} opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p> 
+didyouknow.scanningQr      = <p>Your webcam can scan QR codes printed on publications by {0}. The option 'scan code' on the 'post publication' page opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data.</p><p>{0} adds such QR codes to a white spot on the first page of your uploaded documents. If you print the document with this QR code, you can scan the QR code to later cite this paper.</p> 
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = show posts recently discussed by {0}
