changed error handling for crossref expansion: now all collected crossrefs are collected, the parser does not stop after the first missing crossref

--- a/bibsonomy-bibtex-parser/src/test/resources/test2.bib
+++ b/bibsonomy-bibtex-parser/src/test/resources/test2.bib
@@ -19,3 +19,20 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@inproceedings{DBLP:conf/chi/WalberSS14,
+  author    = {Tina Caroline Walber and
+               Ansgar Scherp and
+               Steffen Staab},
+  title     = {Smart photo selection: interpret gaze as personal interest},
+  booktitle = {{CHI} Conference on Human Factors in Computing Systems, CHI'14, Toronto,
+               ON, Canada - April 26 - May 01, 2014},
+  year      = {2014},
+  pages     = {2065--2074},
+  crossref  = {DBLP:conf/chi/2014},
+  url       = {http://doi.acm.org/10.1145/2556288.2557025},
+  doi       = {10.1145/2556288.2557025},
+  timestamp = {Thu, 13 Nov 2014 11:52:43 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/WalberSS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
