Homepage error fixed. Tooltip on hover added.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -108,6 +108,7 @@ batchedit.alreadyInSnippetError		 = This post is added more than one time to the
 batchedit.button.update			 = update
 batchedit.disregardedPosts       = Disregarded posts
 batchedit.disregardedPosts.info  = This post is not your own and therefore you can not edit it.
+batchedit.disregardedPosts.alert = The following posts are not your own and therefore you can not edit them.
 batchedit.normalizeSelected		 = Normalize BibTex Key
 batchedit.deleteSelected		 = Delete post(s)
 
