history_restore_design+logic

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -75,7 +75,7 @@ hidtory.option2			= Number of edited entries in each date
 hidtory.option3			= Added characters to an entry (green background)
 hidtory.option4			= Removed characters from an entry (red background)
 History.empty			= This post has not been edited yet. 
-history.restore.confirm	= Do you really find to restore the selected entries?
+history.restore.confirm	= Do you really want to restore the selected entries?
 history.restore.ok		= Ok
 history.restore.cancel	= Cancel
 
