fixing message and adding preview of bookmark in batch edit mode

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -63,6 +63,7 @@ batchedit.button.update          = Absenden
 batchedit.deleteSelected         = Eintr\u00E4ge l\u00F6schen
 batchedit.deleteSelected.confirm = Wollen Sie wirklich alle ausgew\u00E4hlten Eintr\u00E4ge l\u00F6schen?
 batchedit.disregardedPosts       = Ignorierte Eintr\u00E4ge
+batchedit.disregardedPosts.alert = Die inaktiven Eintr\u00E4ge sind nicht aus Ihrer Sammlung und k\u00F6nnen daher nicht von Ihnen bearbeitet oder gel\u00F6scht werden.
 batchedit.disregardedPosts.info  = Da die folgenden Eintr\u00E4ge nicht Ihnen geh\u00F6ren, k\u00F6nnen Sie diese nicht bearbeiten.
 batchedit.ignoreSelected         = Eintr\u00E4ge ignorieren
 batchedit.ignoreSelected.confirm = Sollen wirklich alle ausgew\u00E4hlten Eintr\u00E4ge ignoriert werden?
