--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -68,49 +68,48 @@ basket.infoActions      = For example, you can
 basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
+batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
+batchedit.EditAllTag               = Add a tag to all the selected posts
+batchedit.EditEachTag              = Edit each posts' tags separately
+batchedit.Selection.addToAll       = Add a tag (s) to all posts
+batchedit.Selection.addToEach      = Update tag (s) of each post
+batchedit.allTagOk                 = Add tag(s)
+batchedit.alreadyInCollectionError = This post is already stored in Database!
+batchedit.alreadyInSnippetError    = This post is added more than one time to the snippet!
+batchedit.button.update            = update
+batchedit.cancelbtn                = Cancel
+batchedit.checkboxNormalize        = Normalize BibTex Key
 # batchedit page(s)
-batchedit.deleteAlert 			 = Warning: You are about to delete the selected posts!
-batchedit.normalizeAlert		 = Info: You are about to normalize BibTex Key of the selected posts!
-batchedit.selection.help		 = Select an edit option
-
-batchedit.notYours			     = The following posts do not belong to your collection. You can only edit your own posts.
-batchedit.info1                  = Here you can edit your posts. Edit options include
-batchedit.info2					 = To start editing, select at least one post and then select desired editing option. 
-batchedit.option1				 = Normalizing BibTex key
-batchedit.option2				 = Changing privacy 
-batchedit.option3				 = Deleting post(s)
-batchedit.option4				 = Editing tags of each post
-batchedit.option5				 = Adding tag(s) to several posts
-batchedit.selection.initial		 = Please select action...
-batchedit.selection				 = Select
-batchedit.selectAll				 = Select all posts
-batchedit.updateSelected         = update tags
-batchedit.yourPosts              = short description
-batchedit.viewable				 = Update privacy (Viewable for:)
-batchedit.Selection.addToAll	 = Add a tag (s) to all posts
-batchedit.Selection.addToEach	 = Update tag (s) of each post
-batchedit.selectedTags			 = Add these tags to ALL SELECTED posts.
-batchedit.yourTags				 = Your posts' tags
-batchedit.AllpostTagsHeader		 = The following tag(s) will be added <br/> to all the selected posts
-batchedit.noPost.message		 = There is no post to edit!
-batchedit.tagEachBtn.message	 = Add or remove tag(s) of the selected post(s).
-batchedit.tagAllBtn.message		 = Add tag(s) to the selected post(s).
-batchedit.editHint				 = Info: To enable edit options, select an action and at least one post.
-batchedit.eachTagOk				 = Edit tag(s)
-batchedit.allTagOk				 = Add tag(s)
-batchedit.updatePrivacy			 = Update privacy
-batchedit.cancelbtn				 = Cancel
-batchedit.checkboxNormalize		 = Normalize BibTex Key
-batchedit.EditAllTag	 		 = Add a tag to all the selected posts
-batchedit.EditEachTag			 = Edit each posts' tags separately
-batchedit.alreadyInCollectionError	 = This post is already stored in Database!
-batchedit.alreadyInSnippetError		 = This post is added more than one time to the snippet!
-batchedit.button.update			 = update
-batchedit.disregardedPosts       = Disregarded posts
-batchedit.disregardedPosts.info  = This post is not your own and therefore you can not edit it.
-batchedit.disregardedPosts.alert = The following posts are not your own and therefore you can not edit them.
-batchedit.normalizeSelected		 = Normalize BibTex Key
-batchedit.deleteSelected		 = Delete post(s)
+batchedit.deleteAlert              = Warning: You are about to delete the selected posts!
+batchedit.deleteSelected           = Delete post(s)
+batchedit.disregardedPosts         = Disregarded posts
+batchedit.disregardedPosts.alert   = The inactive posts are those that are not in your collection (thus you can not edit or delete them).
+batchedit.disregardedPosts.info    = This post is not your own and therefore you can not edit it.
+batchedit.eachTagOk                = Edit tag(s)
+batchedit.editHint                 = Info: To enable edit options, select an action and at least one post.
+batchedit.info1                    = Here you can edit your posts. Edit options include
+batchedit.info2                    = To start editing, select at least one post and then select desired editing option. 
+batchedit.noPost.message           = There is no post to edit!
+batchedit.normalizeAlert           = Info: You are about to normalize BibTex Key of the selected posts!
+batchedit.normalizeSelected        = Normalize BibTex Key
+batchedit.notYours                 = The following posts do not belong to your collection. You can only edit your own posts.
+batchedit.option1                  = Normalizing BibTex key
+batchedit.option2                  = Changing privacy 
+batchedit.option3                  = Deleting post(s)
+batchedit.option4                  = Editing tags of each post
+batchedit.option5                  = Adding tag(s) to several posts
+batchedit.selectAll                = Select all posts
+batchedit.selectedTags             = Add these tags to ALL SELECTED posts.
+batchedit.selection                = Select
+batchedit.selection.help           = Select an edit option
+batchedit.selection.initial        = Please select action...
+batchedit.tagAllBtn.message        = Add tag(s) to the selected post(s).
+batchedit.tagEachBtn.message       = Add or remove tag(s) of the selected post(s).
+batchedit.updatePrivacy            = Update privacy
+batchedit.updateSelected           = update tags
+batchedit.viewable                 = Update privacy (Viewable for:)
+batchedit.yourPosts                = short description
+batchedit.yourTags                 = Your posts' tags
 
 bibtex.abstract                              = abstract
 bibtex.abstract.cap                          = Abstract
@@ -750,7 +749,7 @@ friends.yourfriends          = your friends are
 gettingStarted = getting started
 
 gettingStarted.cite                  = {0} helps you create bibligraphies for scientific papers. If you use a specific tag for each bibliography and assign it to all your paper posts accordingly, you can use the tag to find all papers of the bibliography. Afterwards, you can export your publication list in the desired format. {0} supports <a href="/export">a lot of formats</a>, e.&nbsp;g. Microsoft Word Reference Manager, EndNote, and BibTeX.
-gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200b\u200bvisible to other group members.</p>
+gettingStarted.collaborate           = <p>Use the search function in order to find other users. On the users page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>With groups of users have better options to collaborate. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200B\u200Bvisible to other group members.</p>
 gettingStarted.collect               = <p>Using {0} you can easily create collections of bookmark and publication posts. Just insert <a href="/postBookmark">bookmarks</a> and <a href="/postPublication">publications</a>. You can do this even faster with our {0} <a href="/buttons">browser add-ons or bookmarklets</a>.</p><p>In addition, you can also use <a href="/postPublication?selTab=3#selTab3">ISBN, ISSN, DOI</a>, or <a href="/postPublication?selTab=4#selTab4">barcodes</a> to have the insert publication form filled up automatically for you.</p><p>Use tags to organize the posts in your collection. If you choose them carefully, tags are a very powerful instrument. <a href="/help_en/How-to%20use%20TAGs">Learn more about tagging</a> in {0}.</p>
 gettingStarted.discover              = <p>Discover new interesting publications for your scientific activities. The fulltext search of {0} helps you doing so. Beyond that, you can use the search field to filter your post lists by tags, authors and users.</p>\n\n<p>Be inspired by the tag clouds. Click on interesting tags, to filter the post lists for special topics. This way, you can browse through topics easily and find related contents by concept.</p>
 gettingStarted.headline              = Getting started with {0}
@@ -946,7 +945,7 @@ mail.registration.subject            = Your {1} Registration
 
 members = members
 
-meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00fcrzburg and L3S Research Center, Hannover (Germany)
+meta.author      = KDE Group, University of Kassel and DMIR Group, University of W\u00FCrzburg and L3S Research Center, Hannover (Germany)
 meta.copyright   = KDE/DMIR/L3S, Germany
 meta.description = The blue social bookmark and publication sharing system.
 meta.keywords    = collaborative tagging, publication management, BibTeX, bookmarks, folksonomy, knowledge management
@@ -1817,7 +1816,7 @@ settings.overwrite.help.browser                  = browser bookmarks overwrite b
 settings.overwrite.help.delicious                = Delicious bookmarks overwrite bookmarks to the same URL in your collection
 settings.password.change.current.error           = Your current password is incorrect.
 settings.password.change.new.error               = Please confirm your new password.
-settings.password.change.success                 = Your password was changed successfully\u044e
+settings.password.change.success                 = Your password was changed successfully\u044E
 settings.password.help.delicious                 = your Delicious password
 settings.passwordwithoutspaces                   = (required :: without spaces)
 settings.picture.current                         = current picture
@@ -1988,7 +1987,7 @@ system.desc                              = The blue social bookmark and publicat
 system.groups                            = To add a new group, first create a user account with the desired group name. Then send an e-mail to <a href="mailto:{0}">{0}</a>. A group allows you to get an aggregated view of its member's posts as well as to make some of your own make visible only to its members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
-system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00fcrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
+system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
 system.recent                            = Here you see the latest posts:
 system.recentlyDiscussed.intro.help      = See our help sections on <a href='/help_en/Discussion%20Reviews%20and%20Comments'>discussions</a> and <a href='/help_en/Discussed%20Posts'>discussed post pages</a> to learn more about reviews and comments.
 system.recentlyDiscussed.intro.noUser    = Bookmarks and publications that were recently reviewed or commented.
