My english @thoni complained about. Yes, hmmm. ;-)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -445,12 +445,12 @@ edittags.main.textOne            = On every post that contains all the tags from
 edittags.main.updaterelations    = update concepts
 edittags.subtag                  = subtag
 edittags.supertag                = name (supertag)
-edittags.update.error            = while updating tags an error occured. Try again.
+edittags.update.error            = An error occured while updating tags. Try again.
 # edit Tags
 edittags.update.headline         = update successful
 edittags.update.relations        = updated {0} concept(s)
 edittags.update.resources        = updated {0} resource(s)
-edittags.update.success          = updating tags was successful.
+edittags.update.success          = Tags were updated successfully.
 
 # general terms
 error = error
