ISBNScraper test resource is modified

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest1.bib
@@ -1,6 +1,5 @@
-@book{anthony1991magischen,
+﻿@book{noauthororeditor1991magischen,
 address = {Bergisch Gladbach},
-author = {Anthony, Piers},
 isbn = {3404201620 9783404201624 3404201604 9783404201600},
 publisher = {Bastei Lübbe},
 refid = {722180819},
