AmazonScraper test resource is modified

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
@@ -1,6 +1,5 @@
-@electronic{antoniou2004semantic,
+@electronic{noauthororeditor2004semantic,
 address = {Cambridge, Mass.},
-author = {Antoniou, G. and Van Harmelen, Frank},
 isbn = {9780262267205 0262267209},
 publisher = {MIT Press},
 refid = {57141643},
