--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest3.bib
@@ -1,7 +1,6 @@
-@book{kelby2008digital,
+@book{noauthororeditor2008digital,
 abstract = {Furnishes an overview of the latest in digital technology, including cameras and equipment, as well as the essential techniques and skills of the photographic process--exposure, lighting, shutter speed, depth of field, and resolution--and tips on how to avoid hours of photo-editing by taking great photographs the first time.},
 address = {Berkeley, CA},
-author = {Kelby, Scott},
 isbn = {9780321605825 0321605829 9780321474049 032147404X},
 publisher = {Peachpit Press},
 refid = {298607714},
