--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest5.bib
@@ -1,6 +1,5 @@
-@electronic{segaran2007programming,
+@electronic{noauthororeditor2007programming,
 address = {Sebastapol, Calif.},
-author = {Segaran, Toby},
 publisher = {O'Reilly},
 refid = {873852272},
 title = {Programming collective intelligence building smart web 2.0 applications. - Includes index},
