--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest7.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest7.bib
@@ -1,7 +1,6 @@
-@electronic{weiss2005mining,
+@electronic{noauthororeditor2005mining,
 abstract = {Text mining searches for regularities, patterns or trends in natural language text. This book focuses on the concepts and methods needed to expand horizons beyond structured, numeric data to automated mining of text samples. It is for researchers, computer scientists, and advanced undergraduates and graduates.},
 address = {New York},
-author = {Weiss, Sholom M.},
 isbn = {0387954333 9780387954332 9780387345550 0387345558},
 publisher = {Springer},
 refid = {525024974},
