--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -69,15 +69,19 @@ basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
 # History page
-hidtory.info			= History page shows edit records of a post, including:
-hidtory.option1			= Editing date
-hidtory.option2			= Number of edited entries in each date 
-hidtory.option3			= Added characters to an entry (green background)
-hidtory.option4			= Removed characters from an entry (red background)
-History.empty			= This post has not been edited yet. 
-history.restore.confirm	= Do you really want to restore the selected entries?
-history.restore.ok		= Ok
-history.restore.cancel	= Cancel
+hidtory.info				= History page shows edit records of a post, including:
+hidtory.option1				= Editing date
+hidtory.option2				= Number of edited fields in each date 
+hidtory.option3				= Added characters to a field (green background)
+hidtory.option4				= Removed characters from a field (red background)
+History.empty				= This post has not been edited yet. 
+history.restore.confirm		= Do you really want to restore the selected fields?
+history.selection.help		= Select a revision and see the differences to this revision.
+history.restoreBtn.disabled = restore button is only enabled when you are comparing a revision to the current post.
+history.restoreBtn.enabled	= restore to this version 
+
+
+
 
 
 batchedit.button.update          = update
