history: history for bookmark added: logic

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -69,7 +69,7 @@ basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
 # History page
-hidtory.info				= History page shows edit records of a post, including:
+hidtory.info				= History page shows editing records of a post, including:
 hidtory.option1				= Editing date
 hidtory.option2				= Number of edited fields in each date 
 hidtory.option3				= Added characters to a field (green background)
